--- a/test.tex
+++ b/test.tex
@@ -40,15 +40,22 @@
 
 \whitecard{Test}{Die ist ein für\newline eine weisse\newline Karte relativ\newline langer Text.\newline Sehr viel länger\newline als so wird es\newline eigentlich nicht.}%%
 \whitecard{Test}{Ein mittellanger Satz sähe dann in etwa so aus.}%
-
 %
 % Blackcards
 %
-
 \blackcard{1}{Test}{Edipiscir \underl eunt omnia gallia.}%
-\blackcard{1}{Test}{Divisa est partes?}%
 
+\blackcard{1}{Test}{Divisa est partes?}%
 \blackcard{2}{Test}{Tres gaius iulius caesar \underl.}%
 \blackcard{3}{Test}{This \underl is a really long text and I want to know hot the \underl cards behave when the text is so fucking long. Will it break?}%
+
+% \newpage
+
+%
+% Backs
+%
+
+\whitecardback $ $
+\blackcardback
 
 \end{document}
