Neue Basiskarten erstellt.

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -96,7 +96,6 @@
 \whitecard{Basis}{Ein Glassdach.}%
 \whitecard{Basis}{Ein kleines Pferd.}%
 \whitecard{Basis}{Ein Leben voller Traurigkeit.}%
-\whitecard{Basis}{Ein M16 Sturmgewehr.}%
 \whitecard{Basis}{Einmal richtig dran schnuppern.}%
 \whitecard{Basis}{Ein Mann mittleren Alters in Rollschuhen.}%
 \whitecard{Basis}{Ein Nerd-Spasti.}%
@@ -115,7 +114,7 @@
 \whitecard{Basis}{Ein übergroßer Lolli.}%
 \whitecard{Basis}{Ein verirrtes Schamhaar.}%
 \whitecard{Basis}{Ein wirklich cooler Hut.}%
-\whitecard{Basis}{Ein Würstchen-Fest.}%
+\whitecard{Basis}{Würstchen-Party}%
 \whitecard{Basis}{Embrionale Stammzellen.}%
 \whitecard{Basis}{Emotionen.}%
 \whitecard{Basis}{Erdrückende Schulden.}%
@@ -219,7 +218,7 @@
 \whitecard{Basis}{Spießer.}%
 \whitecard{Basis}{Spontane Selbstentzündung.}%
 \whitecard{Basis}{Sterben.}%
-\whitecard{Basis}{Stille.}%
+\whitecard{Basis}{Ein Moment der Stille.}%
 \whitecard{Basis}{Suppe, die zu heiß ist.}%
 \whitecard{Basis}{Süße, süße Rache.}%
 \whitecard{Basis}{Swooping.}%
@@ -241,29 +240,40 @@
 \whitecard{Basis}{Zeit für mich.}%
 \whitecard{Basis}{Zentauren.}%
 \whitecard{Basis}{Zuhälter.}%
-\whitecard{Basis}{110\% geben}%
 \whitecard{Basis}{Rassisitisch voreingenommene Einstellungstests.}%
+\whitecard{Basis}{Ein Zigeunerfluch.}%
+\whitecard{Basis}{Ein rechtschaffender Cop, der nichts zu verlieren hat}%
+\whitecard{Basis}{Sexting}%
+\whitecard{Basis}{Gestalten-Wandler}%
+\whitecard{Basis}{Pornostars}%
+\whitecard{Basis}{Vergewaltigen und plündern.}%
+\whitecard{Basis}{Drive-by shooting.}%
+\whitecard{Basis}{Kantinenfrass.}%
+\whitecard{Basis}{Klunker.}%
+\whitecard{Basis}{Berater.}%
+\whitecard{Basis}{Lähmende Schulden.}%
+\whitecard{Basis}{Das Reiner-Calmund-Qualitäts-Siegel.}%
+\whitecard{Basis}{Vorgeben zu verhüten.}%
+\whitecard{Basis}{Öffentliches}%
+\whitecard{Basis}{Verspotten.}%
+\whitecard{Basis}{Spritzen teilen.}%
+\whitecard{Basis}{Der unausweichliche Hitzetod des Universums.}%
+\whitecard{Basis}{Das Wunder der Geburt.}%
+\whitecard{Basis}{Ein M16 Sturmgewehr.}%
+\whitecard{Basis}{110\% geben}%
 %
 \blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
 \blackcard{1}{Basis}{Auf was verzichtest du in der Fastenzeit?\newline \underl.}%
 \blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
 \blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben aufgrund von \underl nicht machen.}%
 \blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
-\blackcard{2}{Basis}{Ich habe \underl  nie wirklich verstanden, bis   ich auf \underl   gestoßen bin.}%
 \blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
 \blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{2}{Basis}{In einer Welt verwüstet von  \underl, ist \underl dein einziger Trost.}%
-\blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
-\blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl. Kannst du mir einen Rat geben?}%
 \blackcard{1}{Basis}{Man sagt, im Knast könne man für 200 Zigaretten \underl bekommen.}%
 \blackcard{1}{Basis}{Nach den Erdbeben brachte Bill Gates \underl zu den Haitianern.}%
 \blackcard{1}{Basis}{Papa, warum weint Mama?}%
-\blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.\newline}%
-\blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
 \blackcard{1}{Basis}{\underl. High Five, Bro.}%
-\blackcard{2}{Basis}{\underl ist eine heikle Lage, die zu \underl führt.}%
 \blackcard{1}{Basis}{\underl. So will ich sterben!}%
-\blackcard{3}{Basis}{\underl + \underl = \underl.}%
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}%
 \blackcard{1}{Basis}{Warum bin ich so klebrig?}%
 \blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}%
@@ -290,7 +300,31 @@
 \blackcard{1}{Basis}{Wir stellen vor: Xtreme Fußball! Es ist wie normales Fußball, nur mit \underl.}%
 \blackcard{1}{Basis}{Womit wirst du deinen Partner immer beeindrucken können?}%
 \blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
-\blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl\newline  \underl\newline  \underl}%
 \blackcard{1}{Basis}{Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen?}%
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
+\blackcard{1}{Basis}{Was hast du aus Mexiko mitgebracht?}%
+\blackcard{1}{Basis}{\underl? Dafür gibts eine App.}%.
+\blackcard{1}{Basis}{\underl. Einmal gepoppt, nie mehr gestoppt?}%
+\blackcard{1}{Basis}{Was ist am krustigsten?}%
+\blackcard{1}{Basis}{In seinen letzten Momenten dachte Michael Jackson an \underl.}%
+\blackcard{1}{Basis}{\underl ist was Frauen wollen.}%
+\blackcard{1}{Basis}{Lieber Dr. Sommer,\newline Ich habe Probleme mit \underl und würde dich gerne um Rat bitten.}%
+\blackcard{1}{Basis}{\underl. So möchte ich sterben.}%
+\blackcard{1}{Basis}{Wissenschaftler haben kürzlich einen primitiven Stamm entdeckt, der \underl verehrt.}%
+\blackcard{1}{Basis}{Doch bevor ich Sie töte, Mr. Bond, muss ich Ihnen \underl zeigen.}%
+\blackcard{1}{Basis}{Und nun auf Eurosport: Das Meisterschaftsturnier des \underl.}%
+\blackcard{1}{Basis}{Wie riechen alte Leute?}%
+\blackcard{2}{Basis}{Ich habe \underl  nie wirklich verstanden, bis   ich auf \underl   gestoßen bin.}%
+\blackcard{2}{Basis}{In einer Welt verwüstet von  \underl, ist \underl dein einziger Trost.}%
+\blackcard{2}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}%
+\blackcard{2}{Basis}{Liebe Margret, Ich habe Probleme mit \underl. Kannst du mir einen Rat geben?}%
+\blackcard{2}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.\newline}%
+\blackcard{2}{Basis}{...Und der Preis für \underl geht an \underl.}%
+\blackcard{2}{Basis}{\underl ist eine heikle Lage, die zu \underl führt.}%
+\blackcard{2}{Basis}{Und der Oscar für \underl geht an \underl.}%
+\blackcard{2}{Basis}{Bei meinem nächsten Zaubertrick wrede ich \underl aus einem \underl holen.}%
+\blackcard{2}{Basis}{Wer bildet das nächste Superhelden/ Gehilfen-Duo?}%
+\blackcard{3}{Basis}{\underl + \underl = \underl.}%
+\blackcard{3}{Basis}{Schreibe einen Haiku:\newline \underl\newline  \underl\newline  \underl}%
+\blackcard{3}{Basis}{\underl + \underl = \underl.}%
